Completed functionality of psychic game.

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
     <h1>
         The Psychic Game
     </h1>
+    <br>
     <h2>
         Guess what letter I'm thinking of.
     </h2>
-    <div id="wins"></div>
     <br>
-    <div id="losses"></div>
+    <div id="wins">Wins: </div>
     <br>
-    <div id="guessesRemaining"></div>
+    <div id="losses">Losses: </div>
+    <br>
+    <div id="guessesRemaining">Guesses Remaining: 9</div>
+    <br>
+    <div id="guessedLetters">Guessed Letters: </div>
 </body>
 
 </html>
